--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="login_username_hint">Username</string>
     <string name="username_hint">Username</string>
     <string name="fullname_hint">Fullname</string>
+    <string name="ownership">Hayvan Sahiplenmek İstiyorum!</string>
+    <string name="adopting">Hayvan Sahiplendirmek İstiyorum!</string>
 </resources>
