--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="fullname_hint">Fullname</string>
     <string name="ownership">Hayvan Sahiplenmek İstiyorum!</string>
     <string name="adopting">Hayvan Sahiplendirmek İstiyorum!</string>
+    <string name="species">Türü</string>
+    <string name="breed">Cinsi</string>
+    <string name="gender">Cinsiyet</string>
+    <string name="birth">Doğum Tarihi</string>
+    <string name="title_adoption">Sevimli Dostunu Bize Tanıt!</string>
+    <string name="name">Evcil Dostunun Adı</string>
 </resources>
