gender value xampp add, etc...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string-array name="gender">
         <item>"Female"</item>
         <item>"Male"</item>
+        <item>"Uncertain/Baby"</item>
     </string-array>
 </resources>
